# hairtag

./: .gitignore  BOM.csv  JOURNAL.md  README.md  export_images.sh
CAD/: README.md  case_bottom.step  case_top.step  hairtag_whole_assembly.step
CAD/render/: hairtag.pcb3d
PCB/hairtag/: fabrication-toolkit-options.json  fp-lib-table  hairtag.kicad_pcb  hairtag.kicad_pro  hairtag.kicad_sch
PCB/hairtag/cr2032_holder.pretty/: Untitled.kicad_mod
PCB/hairtag/production/: hairtag_1_bom.csv  hairtag_1_designators.csv  hairtag_1_positions.csv  netlist.ipc
doc/: hairtag_pcb_merged.step
firmware/: README.md
firmware/esp32c3-openhaystack/: CMakeLists.txt  README.md  main.py  platformio.ini  pyproject.toml
firmware/esp32c3-openhaystack/scripts/: keywriter.py
firmware/esp32c3-openhaystack/src/: main.cpp
firmware/findmy/: generate_keys.py  locate.sh  pyproject.toml  pypush_gsa_icloud.py  reauth.sh  request_reports.py
