[project]
name = "findmy"
version = "0.1.0"
description = "Patched FindMy.py for querying Apple's Find My network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.0",
    "pbkdf2>=1.3",
    "pycryptodomex>=3.23.0",
    "requests>=2.34.2",
    "srp>=1.0.22",
]
